# EX3_67808_OS_HUJI

./: CMakeLists.txt  Main.cpp  Makefile  Makefile3  MapReduceClient.cpp  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  SampleClient.cpp  WordFrequencies.cpp  WordFrequenciesClient.hpp  ex3  ex3.tar  test
Demos/SampleClient/: MapReduceClient.h  MapReduceFramework.h
Demos/atomicdemo/: atomicdemo.cpp
Tests/: EraTest.cpp  ReuTest.tar  bigClient.cpp  eurovisionClient.cpp  points_awarded.in  run script.tar  test.tar  tests_ex3.tar
Tests/Tarantino/: WordFrequencies.cpp  WordFrequenciesClient.hpp
Tests/test/: 1Dog1Cat  1Fish1Sheep  3Fish3Sheep  5Fish3Dog4Sheep3Cat  8Dog2Cat1Fish  Count.cpp  דוגמאת הרצה לחיפוש.odt  דוגמאת הרצה.odt  הסברים+טיפים+המלצות
Tests/test_ex3/: README  test_2.cpp
